--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-TW">
   <head>
@@ -14,6 +15,21 @@
               sans: ['Inter', 'sans-serif'],
               chinese: ['Noto Sans TC', 'sans-serif'],
             },
+            animation: {
+              'shimmer': 'shimmer 2s infinite linear',
+              'pulse-fast': 'pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'gradient-xy': 'gradient-xy 3s ease infinite',
+            },
+            keyframes: {
+              shimmer: {
+                '0%': { backgroundPosition: '-200% 0' },
+                '100%': { backgroundPosition: '200% 0' },
+              },
+              'gradient-xy': {
+                '0%, 100%': { 'background-size': '400% 400%', 'background-position': 'left center' },
+                '50%': { 'background-size': '400% 400%', 'background-position': 'right center' },
+              }
+            }
           }
         }
       }
@@ -46,6 +62,24 @@
       }
       .custom-scrollbar::-webkit-scrollbar {
         width: 6px;
+      }
+
+      /* Shimmer Effect Background */
+      .bg-shimmer {
+        background: linear-gradient(90deg, #f0f0f0 25%, #f8f8f8 50%, #f0f0f0 75%);
+        background-size: 200% 100%;
+      }
+      
+      .btn-loading-gradient {
+        background: linear-gradient(-45deg, #4f46e5, #7c3aed, #2563eb, #4f46e5);
+        background-size: 400% 400%;
+        animation: gradient-flow 3s ease infinite;
+      }
+
+      @keyframes gradient-flow {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
       }
     </style>
   <script type="importmap">
